refactor(Group): 重构了@wgyhm关于Group的全部提交，解决了代码规范性问题和部分性能问题。需@wgyhm重新完成测试。