@@ -1,251 +1,311 @@
 package com.oriole.wisepen.user.service.impl;
 
+import cn.hutool.core.bean.BeanUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 
 import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
+import com.baomidou.mybatisplus.core.conditions.update.UpdateWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
+import com.baomidou.mybatisplus.core.toolkit.CollectionUtils;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
-import com.oriole.wisepen.common.core.context.SecurityContextHolder;
 import com.oriole.wisepen.common.core.domain.PageResult;
 import com.oriole.wisepen.common.core.domain.enums.GroupRoleType;
 import com.oriole.wisepen.common.core.domain.enums.GroupType;
-import com.oriole.wisepen.common.core.domain.enums.IdentityType;
 import com.oriole.wisepen.common.core.exception.ServiceException;
-import com.oriole.wisepen.user.api.domain.dto.MemberListQueryResponse;
-import com.oriole.wisepen.user.component.RedisSaver;
+import com.oriole.wisepen.user.api.domain.base.UserDisplayBase;
+import com.oriole.wisepen.user.api.domain.dto.req.*;
+import com.oriole.wisepen.user.api.domain.dto.res.GroupMemberDetailResponse;
+import com.oriole.wisepen.user.cache.RedisCacheManager;
 import com.oriole.wisepen.user.domain.entity.*;
 import com.oriole.wisepen.user.exception.GroupErrorCode;
 import com.oriole.wisepen.user.mapper.*;
 import com.oriole.wisepen.user.service.GroupMemberService;
 import com.oriole.wisepen.user.service.GroupService;
+import com.oriole.wisepen.user.service.UserService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class GroupMemberServiceImpl implements GroupMemberService {
 
 	private final GroupMapper groupMapper;
 	private final GroupMemberMapper groupMemberMapper;
-	private final UserMapper userMapper;
-	private final UserProfileMapper userProfileMapper;
-	private final GroupMemberQuotasMapper groupMemberQuotasMapper;
 	private final GroupService groupService;
-	private final RedisSaver redisSaver;
+	private final UserService userService;
+	private final RedisCacheManager redisCacheManager;
 
-	public Boolean validateIsExisted(Long groupId){
-		return groupMapper.selectById(groupId) != null;
-	}
-
-	private GroupMember findGroupMemberByGroupId(Long userId, Long groupId){
-		LambdaQueryWrapper<GroupMember> queryWrapper = new LambdaQueryWrapper<GroupMember>()
-				.eq(GroupMember::getGroupId, groupId)
-				.eq(GroupMember::getUserId, userId);
-		return groupMemberMapper.selectOne(queryWrapper);
-	}
-
-	private void insertGroupMember(GroupMember groupMember, GroupType type){
-		groupMemberMapper.insert(groupMember);
-
-		if (type!=GroupType.NORMAL_GROUP) {
-			GroupMemberQuotas groupMemberQuotas = new GroupMemberQuotas();
-			groupMemberQuotas.setId(groupMember.getId());
-			groupMemberQuotas.setQuotaUsed(0);
-			groupMemberQuotas.setQuotaLimit(0);
+	@Override
+	public Map<String, Integer> getGroupRoleMapByUserId(Long userId) {
+		List<GroupMemberEntity> members = groupMemberMapper.selectList(
+				new LambdaQueryWrapper<GroupMemberEntity>()
+						.eq(GroupMemberEntity::getUserId, userId)
+						.select(GroupMemberEntity::getGroupId, GroupMemberEntity::getRole)
+		);
+		if (CollectionUtils.isEmpty(members)) {
+			return Collections.emptyMap();
 		}
+		return members.stream()
+				.collect(Collectors.toMap(
+						member -> String.valueOf(member.getGroupId()),
+						member -> member.getRole().getCode()
+				));
 	}
 
 	@Override
-	public void joinGroup(Long userId, String inviteCode) {
-		LambdaQueryWrapper<Group> queryWrapper = new LambdaQueryWrapper<Group>()
-				.eq(Group::getInviteCode, inviteCode);
-		Group group=groupMapper.selectOne(queryWrapper);
-
-		if (group==null||group.getDelFlag()==1){
-			throw new ServiceException(GroupErrorCode.GROUP_NOT_EXIST);
-		}
-
-		LambdaQueryWrapper<GroupMember> wrapper = new LambdaQueryWrapper<GroupMember>().eq(GroupMember::getGroupId, group.getId()).eq(GroupMember::getUserId, userId);
-		if (groupMemberMapper.selectCount(wrapper)>0){
+	public void joinGroup(GroupMemberJoinRequest req, String userId, Set<String> userJoinedGroupIds) {
+		Long groupId = groupService.getGroupIdByInviteCode(req.getInviteCode());
+		if (userJoinedGroupIds.contains(groupId.toString())) { // 检查是否在群内
 			throw new ServiceException(GroupErrorCode.MEMBER_IS_EXISTED);
 		}
-		GroupMember groupMember=new GroupMember();
-		groupMember.setGroupId(group.getId());
-		groupMember.setUserId(userId);
-		//初始设为 member
-		groupMember.setRole(GroupRoleType.MEMBER);
 
-		insertGroupMember(groupMember,group.getType());
-		redisSaver.updateGroupRoleMap(userId,groupService.getGroupRoleMapByUserId(userId));
+		this.joinGroup(groupId, Long.valueOf(userId), GroupRoleType.MEMBER);
 	}
 
 	@Override
-	public void becomeGroupOwner(Long userId, Long groupId) {
-		Group group=groupMapper.selectById(groupId);
+	public void joinGroup(Long groupId, Long userId, GroupRoleType groupRoleType) {
+		GroupMemberEntity member = GroupMemberEntity.builder()
+				.groupId(groupId).userId(userId)
+				.role(groupRoleType).joinTime(new Date())
+				.tokenLimit(0).tokenUsed(0)
+				.build();
+		groupMemberMapper.insert(member);
 
-		GroupMember groupMember=new GroupMember();
-		groupMember.setGroupId(groupId);
-		groupMember.setUserId(userId);
-		//新建时默认为 OWNER
-		groupMember.setRole(GroupRoleType.OWNER);
-
-		insertGroupMember(groupMember,group.getType());
-		redisSaver.updateGroupRoleMap(userId,groupService.getGroupRoleMapByUserId(userId));
+		// 更新 Redis
+		redisCacheManager.updateGroupRoleMapInSession(userId.toString(), groupId.toString(), GroupRoleType.MEMBER);
 	}
 
 	@Override
-	public GroupRoleType getGroupRoleTypeByGroupId(Long groupId) {
-		Long userId = Long.valueOf(SecurityContextHolder.getUserId());
-		GroupMember groupMember = findGroupMemberByGroupId(userId,groupId);
-		if (groupMember==null) {
-			throw new ServiceException(GroupErrorCode.MEMBER_NOT_IN_GROUP);
+	public void quitGroup(GroupMemberQuitRequest req, String userId, GroupRoleType opGroupRoleType) {
+		if (GroupRoleType.OWNER.equals(opGroupRoleType)) {
+			throw new ServiceException(GroupErrorCode.OWNER_QUIT_GROUP); // 群主不可直接退群
 		}
-		return groupMember.getRole();
+
+		LambdaQueryWrapper<GroupMemberEntity> deleteWrapper = new LambdaQueryWrapper<>();
+		deleteWrapper.eq(GroupMemberEntity::getGroupId, req.getGroupId())
+				.eq(GroupMemberEntity::getUserId, Long.valueOf(userId));
+		groupMemberMapper.delete(deleteWrapper);
+
+		// 更新 Redis
+		redisCacheManager.updateGroupRoleMapInSession(userId, req.getGroupId(), GroupRoleType.NOT_MEMBER);
 	}
 
 	@Override
-	public void leaveGroup(Long userId, Long groupId) {
-		if (!validateIsExisted(groupId)) {
-			throw new ServiceException(GroupErrorCode.GROUP_NOT_EXIST);
-		}
-		Group group = groupMapper.selectById(groupId);
-		GroupMember groupMember=findGroupMemberByGroupId(userId,groupId);
+	public void kickGroupMembers(GroupMemberKickRequest req, String opUserId, GroupRoleType opGroupRoleType) {
+		Set<Long> targetUserIdSet = req.getTargetUserIds().stream()
+				.filter(id -> !id.equals(opUserId))
+				.map(Long::valueOf)
+				.collect(Collectors.toSet()); // 不能踢自己
 
-		if (groupMember==null) {
-			throw new ServiceException(GroupErrorCode.MEMBER_NOT_IN_GROUP);
-		}
-
-		if (group.getOwnerId().equals(userId)) {
-			throw new ServiceException(GroupErrorCode.MEMBER_IS_OWNER);
+		if (targetUserIdSet.isEmpty()) {
+			throw new ServiceException(GroupErrorCode.TARGET_MEMBER_NOT_EXIST);
 		}
 
-		groupMemberMapper.deleteById(groupMember);
-		redisSaver.updateGroupRoleMap(userId,groupService.getGroupRoleMapByUserId(userId));
-	}
+		LambdaQueryWrapper<GroupMemberEntity> wrapper = new LambdaQueryWrapper<>();
+		wrapper.eq(GroupMemberEntity::getGroupId, Long.valueOf(req.getGroupId()))
+				.in(GroupMemberEntity::getUserId, targetUserIdSet);
+		List<GroupMemberEntity> targetMembers = groupMemberMapper.selectList(wrapper);
 
-	@Override
-	public void kickGroupMember(Long userId, Long groupId, Long targetUserId) {
-		if (!validateIsExisted(groupId)) {
-			throw new ServiceException(GroupErrorCode.GROUP_NOT_EXIST);
+		if (targetMembers.isEmpty()) {
+			throw new ServiceException(GroupErrorCode.TARGET_MEMBER_NOT_EXIST);
 		}
 
-		if (targetUserId.equals(userId)){
-			throw new ServiceException(GroupErrorCode.DO_NOT_UPDATE_YOURSELF);
-		}
+		List<Long> validUserIdsToDelete = new ArrayList<>(); // 收集符合踢出条件的 userId
 
-		GroupMember groupMember=findGroupMemberByGroupId(userId,groupId);
-		if (groupMember==null||groupMember.getRole()==GroupRoleType.NOT_MEMBER) {
-			throw new ServiceException(GroupErrorCode.MEMBER_NOT_IN_GROUP);
-		}
-		GroupMember targetGroupMember=findGroupMemberByGroupId(targetUserId,groupId);
-		if (targetGroupMember==null||targetGroupMember.getRole()==GroupRoleType.NOT_MEMBER) {
-			throw new ServiceException(GroupErrorCode.MEMBER_NOT_IN_GROUP);
-		}
-
-		//权限不够，权限高的操控权限低的
-		if (targetGroupMember.getRole().getCode()<=groupMember.getRole().getCode()) {
-			throw new ServiceException(GroupErrorCode.PERMISSION_IS_LOWER);
-		}
-
-		groupMemberMapper.deleteById(targetGroupMember);
-		redisSaver.updateGroupRoleMap(targetUserId,groupService.getGroupRoleMapByUserId(targetUserId));
-	}
-
-	@Override
-	public void kickGroupMembers(Long operatorUserId, Long groupId, List<Long> targetUserIds) {
-		for (Long targetUserId : targetUserIds) {
-			// 复用你原来的单个踢人逻辑
-			kickGroupMember(operatorUserId, groupId, targetUserId);
-		}
-	}
-
-	@Override
-	public PageResult<MemberListQueryResponse> getMemberList(Long groupId, Integer page, Integer size) {
-		if (!validateIsExisted(groupId)) {
-			throw new ServiceException(GroupErrorCode.GROUP_NOT_EXIST);
-		}
-
-		Group group=groupMapper.selectById(groupId);
-
-		Page<GroupMember> mpPage = new Page<>(page, size);
-		LambdaQueryWrapper<GroupMember> wrapper = new LambdaQueryWrapper<GroupMember>()
-				.eq(GroupMember::getGroupId,groupId)
-				.select(GroupMember::getUserId,GroupMember::getGroupId,GroupMember::getRole,GroupMember::getJoinTime);
-
-		IPage<GroupMember> memberRecords = groupMemberMapper.selectPage(mpPage, wrapper);
-		List<Long> ids = memberRecords.getRecords().stream()
-				.map(GroupMember::getUserId)
-				.distinct()
-				.toList();
-
-		if (ids.isEmpty()) {
-			return new PageResult<>(memberRecords.getTotal(),page,size);
-		}
-		List<User> users=userMapper.selectBatchIds(ids);
-		List<UserProfile> userProfiles=userProfileMapper.selectBatchIds(ids);
-
-		Map<Long, User> userMap = users.stream()
-				.collect(Collectors.toMap(User::getId, u -> u, (a, b) -> a));
-
-		Map<Long, UserProfile> userProfileMap = userProfiles.stream()
-				.collect(Collectors.toMap(UserProfile::getUserId, u -> u, (a, b) -> a));
-
-		List<MemberListQueryResponse> records = memberRecords.getRecords().stream().map(gm -> {
-			MemberListQueryResponse resp = new MemberListQueryResponse();
-			Long uid = gm.getUserId();
-
-			resp.setUserId(uid);
-			resp.setRole(gm.getRole());
-			resp.setJoinTime(gm.getJoinTime());
-
-			User u = userMap.get(uid);
-			if (u != null) {
-				resp.setNickname(u.getNickname());
+		for (GroupMemberEntity target : targetMembers) {
+			// 权限数值越小权限越大 (如 OWNER=1, ADMIN=2, MEMBER=3)，操作者的权限必须严格高于被踢者
+			if (opGroupRoleType.getCode() < target.getRole().getCode()) {
+				validUserIdsToDelete.add(target.getUserId());
 			}
-			//普通组不显示 real_name
-			if (group.getType()!= GroupType.NORMAL_GROUP) {
-				UserProfile uu = userProfileMap.get(uid);
-				if (uu != null) {
-					resp.setRealname(uu.getRealName());
-				}
-			}
+		}
+
+		if (validUserIdsToDelete.isEmpty()) {
+			throw new ServiceException(GroupErrorCode.TARGET_MEMBER_NOT_EXIST);
+		}
+
+		LambdaQueryWrapper<GroupMemberEntity> deleteWrapper = new LambdaQueryWrapper<>();
+		deleteWrapper.eq(GroupMemberEntity::getGroupId, req.getGroupId())
+				.in(GroupMemberEntity::getUserId, validUserIdsToDelete);
+		groupMemberMapper.delete(deleteWrapper);
+
+		// 更新 Redis
+		validUserIdsToDelete.forEach(targetId ->
+				redisCacheManager.updateGroupRoleMapInSession(targetId.toString(), req.getGroupId(), GroupRoleType.NOT_MEMBER)
+		);
+	}
+
+	@Override
+	public GroupMemberDetailResponse getGroupMemberInfoByUserId(String groupId, String userId){
+		LambdaQueryWrapper<GroupMemberEntity> wrapper = new LambdaQueryWrapper<>();
+		wrapper.eq(GroupMemberEntity::getGroupId, Long.valueOf(groupId))
+				.eq(GroupMemberEntity::getUserId, Long.valueOf(userId));
+
+		GroupMemberEntity memberEntity = groupMemberMapper.selectOne(wrapper);
+
+		if (memberEntity == null) {
+			throw new ServiceException(GroupErrorCode.TARGET_MEMBER_NOT_EXIST);
+		}
+
+		UserDisplayBase userInfo = userService.getUserDisplayInfoById(Long.valueOf(userId));
+
+		GroupMemberDetailResponse resp = new GroupMemberDetailResponse();
+		BeanUtil.copyProperties(memberEntity, resp);
+		resp.setMemberId(memberEntity.getUserId().toString());
+		resp.setMemberInfo(userInfo);
+		return resp;
+	}
+
+	@Override
+	public PageResult<GroupMemberDetailResponse> getGroupMemberList(String groupId, int page, int size) {
+		Page<GroupMemberEntity> pageParam = new Page<>(page, size);
+		LambdaQueryWrapper<GroupMemberEntity> wrapper = new LambdaQueryWrapper<>();
+		wrapper.eq(GroupMemberEntity::getGroupId, Long.valueOf(groupId))
+				// 按角色升序(OWNER排前面)，再按加入时间降序(新入群的在前面)
+				.orderByAsc(GroupMemberEntity::getRole)
+				.orderByDesc(GroupMemberEntity::getJoinTime);
+
+		IPage<GroupMemberEntity> memberPage = groupMemberMapper.selectPage(pageParam, wrapper);
+
+		// 提取当前页所有的 userId
+		Set<Long> userIds = memberPage.getRecords().stream()
+				.map(GroupMemberEntity::getUserId)
+				.collect(Collectors.toSet());
+
+		PageResult<GroupMemberDetailResponse> pageResult = new PageResult<>(memberPage.getTotal(), page, size);
+
+		Map<Long, UserDisplayBase> userMap = userService.getUserDisplayInfoByIds(userIds);
+
+		List<GroupMemberDetailResponse> records = memberPage.getRecords().stream().map(memberEntity -> {
+			GroupMemberDetailResponse resp = new GroupMemberDetailResponse();
+			BeanUtil.copyProperties(memberEntity, resp);
+			resp.setMemberId(memberEntity.getUserId().toString());
+			resp.setMemberInfo(userMap.get(memberEntity.getUserId()));
 			return resp;
-		}).toList();
-		//加一个按照role和joinTime排序的操作。
-//		List<MemberListQueryResp> records=BeanUtil.copyToList(users,MemberListQueryResp.class);
-		PageResult<MemberListQueryResponse> pr = new PageResult<>(memberRecords.getTotal(), page, size);
-		pr.setList(records);
-		return pr;
+		}).collect(Collectors.toList());
+
+		pageResult.addAll(records);
+		return pageResult;
 	}
 
 	@Override
-	public void updateGroupMemberRole(Long groupId, Long targetUserId, Integer role) {
-		Long userId= Long.valueOf(SecurityContextHolder.getUserId());
+	public void updateGroupMemberRole(GroupMemberRoleUpdateRequest req, String opUserId) {
+		Set<Long> targetUserIdSet = req.getTargetUserIds().stream()
+				.filter(id -> !id.equals(opUserId))
+				.map(Long::valueOf)
+				.collect(Collectors.toSet()); // 不能更新自己的权限
 
-		if (targetUserId.equals(userId)){
-			throw new ServiceException(GroupErrorCode.DO_NOT_UPDATE_YOURSELF);
-		}
-		GroupMember targetGroupMember = findGroupMemberByGroupId(targetUserId, groupId);
-		if (targetGroupMember==null||targetGroupMember.getRole()==GroupRoleType.NOT_MEMBER) {
-			throw new ServiceException(GroupErrorCode.MEMBER_NOT_IN_GROUP);
-		}
-
-		GroupMember groupMember=findGroupMemberByGroupId(userId,groupId);
-		if (groupMember==null||
-				groupMember.getRole()==GroupRoleType.NOT_MEMBER||
-				!groupMember.getRole().equals(GroupRoleType.OWNER)) {
-			throw new ServiceException(GroupErrorCode.PERMISSION_IS_LOWER);
+		if (targetUserIdSet.isEmpty()) {
+			throw new ServiceException(GroupErrorCode.TARGET_MEMBER_NOT_EXIST);
 		}
 
-		LambdaUpdateWrapper<GroupMember> wrapper = new LambdaUpdateWrapper<GroupMember>()
-				.eq(GroupMember::getId,targetGroupMember.getId())
-				.set(GroupMember::getRole,role);
-		redisSaver.updateGroupRoleMap(targetUserId,groupService.getGroupRoleMapByUserId(targetUserId));
-		groupMemberMapper.update(wrapper);
+		LambdaQueryWrapper<GroupMemberEntity> queryWrapper = new LambdaQueryWrapper<>();
+		queryWrapper.eq(GroupMemberEntity::getGroupId, Long.valueOf(req.getGroupId()))
+				.in(GroupMemberEntity::getUserId, targetUserIdSet);
+		List<GroupMemberEntity> existMembers = groupMemberMapper.selectList(queryWrapper);
+
+		if (existMembers.isEmpty()) {
+			throw new ServiceException(GroupErrorCode.TARGET_MEMBER_NOT_EXIST);
+		}
+
+		List<Long> actualUserIdsToUpdate = existMembers.stream()
+				.map(GroupMemberEntity::getUserId)
+				.collect(Collectors.toList());
+
+		LambdaUpdateWrapper<GroupMemberEntity> wrapper = new LambdaUpdateWrapper<>();
+		wrapper.eq(GroupMemberEntity::getGroupId, Long.valueOf(req.getGroupId()))
+				.in(GroupMemberEntity::getUserId, actualUserIdsToUpdate)
+				.set(GroupMemberEntity::getRole, req.getRole());
+
+		groupMemberMapper.update(null, wrapper);
+
+		actualUserIdsToUpdate.forEach(targetId ->
+						redisCacheManager.updateGroupRoleMapInSession(targetId.toString(), req.getGroupId(), req.getRole())
+		);
+	}
+
+	@Override
+	public void removeAllGroupMembers(Long groupId) {
+		LambdaQueryWrapper<GroupMemberEntity> queryWrapper = new LambdaQueryWrapper<>();
+		queryWrapper.eq(GroupMemberEntity::getGroupId, groupId);
+		List<GroupMemberEntity> allMembers = groupMemberMapper.selectList(queryWrapper);
+
+		groupMemberMapper.delete(queryWrapper);
+
+		// 3. 精准同步：遍历所有被踢出的成员，将他们的 Redis 状态置为 NOT_MEMBER
+		allMembers.forEach(member ->
+				redisCacheManager.updateGroupRoleMapInSession(member.getUserId().toString(), groupId.toString(), GroupRoleType.NOT_MEMBER)
+		);
+	}
+
+	@Override
+	@Transactional(rollbackFor = Exception.class)
+	public void updateGroupMemberTokenUsed(Long groupId, Long userId, Integer usedToken) {
+		// 联动扣除群组大盘资金池
+		groupService.updateGroupTokenUsed(groupId, usedToken);
+
+		UpdateWrapper<GroupMemberEntity> wrapper = new UpdateWrapper<>();
+		wrapper.eq("group_id", groupId)
+				.eq("user_id", userId)
+				.setSql("token_used = token_used + " + usedToken);
+
+		groupMemberMapper.update(null, wrapper);
+
+		// 查询个人最新额度消耗情况
+		LambdaQueryWrapper<GroupMemberEntity> queryWrapper = new LambdaQueryWrapper<>();
+		queryWrapper.eq(GroupMemberEntity::getGroupId, groupId)
+				.eq(GroupMemberEntity::getUserId, userId);
+		GroupMemberEntity member = groupMemberMapper.selectOne(queryWrapper);
+
+		// 如果个人已用量超过了上限，触发个人熔断
+		if (member != null && member.getTokenUsed() >= member.getTokenLimit()) {
+			redisCacheManager.blockGroupMemberChat(groupId.toString(), userId.toString());
+			log.warn("用户 {} 在群组 {} 的个人配额已爆仓，已用: {}, 上限: {}。已触发 Redis 熔断",
+					userId, groupId, member.getTokenUsed(), member.getTokenLimit());
+		}
+	}
+
+	@Override
+	@Transactional(rollbackFor = Exception.class)
+	public void updateGroupMemberTokenLimit(GroupMemberTokenLimitUpdateRequest req) {
+		GroupEntity group = groupMapper.selectById(req.getGroupId());
+		if (group == null) throw new ServiceException(GroupErrorCode.GROUP_NOT_EXIST);
+
+		if (!GroupType.ADVANCED_GROUP.equals(group.getGroupType())) {
+			throw new ServiceException(GroupErrorCode.GROUP_HAS_NO_QUOTA);
+		}
+
+		// 批量更新额度，并防降额击穿
+		LambdaUpdateWrapper<GroupMemberEntity> wrapper = new LambdaUpdateWrapper<>();
+		wrapper.eq(GroupMemberEntity::getGroupId, req.getGroupId())
+				.in(GroupMemberEntity::getUserId, req.getTargetUserIds())
+				// 新给定的上限，绝对不能小于该用户已经用掉的额度
+				.le(GroupMemberEntity::getTokenUsed, req.getNewTokenLimit())
+				.set(GroupMemberEntity::getTokenLimit, req.getNewTokenLimit());
+
+		int rows = groupMemberMapper.update(null, wrapper);
+
+		if (rows == 0) {
+			throw new ServiceException(GroupErrorCode.LIMIT_CANNOT_BE_LOWER_THAN_USED);
+		}
+
+		LambdaQueryWrapper<GroupMemberEntity> queryWrapper = new LambdaQueryWrapper<>();
+		queryWrapper.eq(GroupMemberEntity::getGroupId, req.getGroupId())
+				.in(GroupMemberEntity::getUserId, req.getTargetUserIds())
+				// 必须严格小于 (<)！如果等于，说明额度依然是满的，不能解封
+				.lt(GroupMemberEntity::getTokenUsed, req.getNewTokenLimit());
+
+		List<GroupMemberEntity> validMembersToUnblock = groupMemberMapper.selectList(queryWrapper);
+
+		validMembersToUnblock.forEach(member ->
+				redisCacheManager.unblockGroupMemberChat(req.getGroupId(), member.getUserId().toString())
+		);
+
+
 	}
 }
